--- a/React/package.json
+++ b/React/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.19.0",
     "jsonwebtoken": "^8.5.1",
     "mdbreact": "^4.15.0",
+    "mongodb": "^3.2.7",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
