--- a/WebServer/package.json
+++ b/WebServer/package.json
@@ -9,12 +9,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "file-system": "^2.2.2",
     "hbs": "^4.0.4",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
-    "underscore": "^1.9.1"
+    "mongodb": "^3.2.7",
+    "mongoose": "^5.6.2",
+    "underscore": "^1.9.1",
+    "validator": "^11.0.0"
   }
 }
