--- a/React/package.json
+++ b/React/package.json
@@ -9,10 +9,12 @@
     "mongodb": "^3.2.7",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
+    "react-cookie": "^4.0.1",
     "react-dom": "^16.8.6",
     "react-player": "^1.11.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "universal-cookie": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
